syntax = "proto3";
package configmanager;

service ConfigManager {
    rpc Create(Config) returns (Config) {}
    rpc Get(ConfigRequestVersion) returns (Config) {}
    rpc GetAll(Empty) returns (ConfigList) {}
    rpc Update(Config) returns (Config) {}
    rpc Delete(ConfigRequestPath) returns (Empty) {}
    rpc DeleteVersion(ConfigRequestVersion) returns (Empty) {}
}

message Empty {}

message ConfigList {
    repeated Config configs = 1;
}

message Config {
    uint32 version = 1;
    string name = 2;
    repeated Pair data = 3;
    bool used = 4;
}

message Pair {
    string key = 1;
    string value = 2;
}

message ConfigRequestPath {
    string path = 1;
}

message ConfigRequestVersion {
    string version = 1;
}
